# afkode

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  license.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  reference_afkode.html  run.py  search.html  searchindex.js  simple_concat.py
.doctrees/: environment.pickle  index.doctree  license.doctree  reference_afkode.doctree
.github/: CODEOWNERS  labels.json  pr-labeler.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: labels.yml  pages.yml  release-drafter.yml  release.yml  test-pypi.yml  tests.yml
_sources/: index.rst.txt  reference_afkode.rst.txt
afkode/: __init__.py  action.py  api.py  config.json  config.yaml  globals.py  meta.py  run.py  serve.py  set_env.py  utils.py  voice_interface.py
afkode/commands/: 0_template.py  keyword_search.py  list_actions.py  send_latest_agent_response_to_notes.py  send_latest_to_chat.py  send_latest_to_notes.py  send_latest_transcription_to_chat.py  send_latest_transcription_to_notes.py  suggest_program_actions.py  suggest_program_commands.py  suggest_program_functionality.py  suggest_program_improvements.py  suggest_program_tests.py  summarize_filename.py  summarize_today.py
afkode/ios/: av_audio.py  listen.py  speech.py  test_io.py
afkode/macos/: listen.py  speech.py
afkode/prompts/: prompting_framework.txt
afkode/prompts/debug/: nox_tests.txt  program_functionality.txt  program_tests.txt  whisper_hallucinations.txt
afkode/prompts/goal/: answer_user_input.txt  dnd_partial_summary.txt  example.txt  summarize_map.txt  summarize_rolling.txt  summarize_strategy.txt
afkode/prompts/output/: basic.txt  example.txt  limit_400.txt  ssml.txt  summarize_strategy.txt
afkode/prompts/programflow/: choose_command.txt  harmonize_transcripts.txt  proposed_filename.txt  user_input_assist.txt
afkode/tasks/: 2307_dnd.yaml  summarize_dnd.json
ai_cookie/: __init__.py  action.py  api.py  apple.py  commands.py  file.py  globals.py  mock_api.py  run.py  utils.py  voice.py  voice_alt.py  voice_interface.py
ai_cookie/commands/: exit.py  list_actions.py  send_latest_to_chat.py  summarize_today.py
ai_cookie/ios/: __init__.py  listen.py  speech.py
ai_cookie/macos/: __init__.py  listen.py  speech.py
docs/: conf.py  index.rst  reference_ai_cookie.rst  requirements.txt
prompts/debug/: program_improvements.txt  suggest_commands.txt
prompts/programflow/: choose_command.txt  harmonize_transcripts.txt  proposed_filename.txt  user_input_assist.txt
shortcuts/: CreateNote.shortcut  SaveFile.shortcut
tests/: __init__.py  alternative_recording.py  alternative_recording2.py  conftest.py  shorcut_save.py  test_utils.py
